crates/compiler/src/tests/e2e/good/0579_closure_env_name_collision/main.gom
struct closure_env_f_0 {
    value: int32,
}

fn main() -> unit {
    let _ = closure_env_f_0 { value: 1i32 };
    let f = |x: int32| x + 1i32;
    println(f(2i32).to_string());
}
