crates/compiler/src/tests/e2e/bad/0004_wrong_func_arg_type/main.gom
fn apply(f: (int32) -> int32, x: int32) -> int32 {
  f(x)
}

fn double_string(s: string) -> string {
  s + s
}

fn main() -> unit {
  let _ = apply(double_string, 42);
  ()
}
